--- a/src/components/homepage/SideNavBar.css
+++ b/src/components/homepage/SideNavBar.css
@@ -322,7 +322,7 @@
 	font-size: 20px;
 	font-weight: 600;
 	color: #173468;
-	height: 100%;
+	/* height: 100%; */
 	padding: 20px 40px;
 	display: flex;
 	align-items: center;
